--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
 		"@types/react": "18.2.7",
 		"@types/react-dom": "18.2.4",
 		"autoprefixer": "10.4.14",
+		"esbuild": "^0.18.13",
 		"gray-matter": "^4.0.3",
+		"mdx-bundler": "^9.2.1",
 		"next": "13.4.4",
 		"postcss": "8.4.24",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"rehype-prism-plus": "^1.6.1",
 		"remark": "^14.0.3",
 		"remark-html": "^15.0.2",
 		"tailwindcss": "3.3.2",
